feat: anime & manga image generator
